--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,18 @@
 ---
+const pagetittle = "A propos de moi;"
+
+const identity = {
+  firstName: "Najo",
+  country: "France",
+  occupation: "Curieux",
+  hobbies: ["lecture", "observation", "tester"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "Astro", "Analyse de documentation"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
 
 ---
 
@@ -8,13 +22,13 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>About</title>
+    <title>{pagetittle}</title>
   </head>
   <body>
     <a href="/">Accueil</a>
     <a href="/about/">À propos</a>
     <a href="/blog/">Blog</a>
-    <h1>À propos de moi</h1>
+    <h1>{pagetittle}</h1>
     <h2>... et de mon nouveau site Astro !</h2>
 
     <p>
@@ -28,5 +42,22 @@
       le tutoriel, alors revenez régulièrement voir comment se déroule mon
       parcours !
     </p>
+    <p>Voici quelques faits me concernant :</p>
+    <ul>
+    <li>Je m'appelle {identity.firstName}.</li>
+    <li>Je vis au {identity.country} et je travaille en tant que {identity.occupation}.</li>
+    {identity.hobbies.length >= 2 &&
+        <li>Deux de mes loisirs sont : {identity.hobbies[0]} et {identity.hobbies[1]}</li>
+    }
+    </ul>
+    <p>Voici mes compétences :</p>
+    <ul>
+    {skills.map((skill) => <li>{skill}</li>)}
+    </ul>   
+    {happy && <p>Je suis heureux d'apprendre Astro !</p>}
+    {finished && <p>J'ai terminé ce tutoriel !</p>}
+    {goal === 3 ? <p>Mon objectif est de terminer en 3 jours.</p> : <p>Mon objectif n'est pas de 3 jours.</p>}
+
+    
   </body>
 </html>
