--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-
+const pagetittle = "pagetittle";
 ---
 
 <html lang="en">
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>About</title>
+    <title>{pagetittle}</title>
   </head>
   <body>
     <a href="/">Accueil</a>
@@ -16,5 +16,10 @@
     <a href="/blog/">Blog</a>
     <h1>Mon blog d'apprentissage Astro</h1>
     <p>Voici où je vais publier mon parcours d'apprentissage d'Astro.</p>
+    <ul>
+      <li><a href="/posts/post-1/">Article 1</a></li>
+      <li><a href="/posts/post-2/">Article 2</a></li>
+      <li><a href="/posts/post-3/">Article 3</a></li>
+    </ul>
   </body>
 </html>
