--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,13 @@
 ---
+import '../styles/global.css';
+import Header from '../components/header.astro';
+import Footer from '../components/footer.astro';
+import BlogPost from "../components/BlogPost.astro";
+
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+
 const pagetittle = "pagetittle";
+
 ---
 
 <html lang="en">
@@ -11,15 +19,17 @@ const pagetittle = "pagetittle";
     <title>{pagetittle}</title>
   </head>
   <body>
-    <a href="/">Accueil</a>
-    <a href="/about/">À propos</a>
-    <a href="/blog/">Blog</a>
+    <Header/>
     <h1>Mon blog d'apprentissage Astro</h1>
     <p>Voici où je vais publier mon parcours d'apprentissage d'Astro.</p>
+    <p class="div-2"><a href="/tags/">Étiquettes</a></p>
+    
     <ul>
-      <li><a href="/posts/post-1/">Article 1</a></li>
-      <li><a href="/posts/post-2/">Article 2</a></li>
-      <li><a href="/posts/post-3/">Article 3</a></li>
+      {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
     </ul>
+    <Footer/>
+    <script>
+      import "../scripts/menu.js"
+    </script>
   </body>
 </html>
