--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -110,10 +110,12 @@ header {
 
 .dark .sun { 
   fill: transparent; 
+  transition: fill 0.3s ease;
 }
 
 .dark .moon { 
-  fill: white; 
+  fill: white;
+  transition: fill 0.3s ease; 
 }
 
 /* hamburger */
@@ -155,6 +157,7 @@ header {
   text-decoration: none;
   color: currentColor; /* Utilise la couleur du texte actuel */
 }
+
  /* nav */ 
 
 nav {
