--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,15 +88,15 @@ header {
   border: none;
   background: none;
   width: 30px;
+  height: 30px;
   display: flex;
   cursor: pointer;
   border-style: none;
+  visibility: visible;
+  opacity: 1;
   padding: 0;
 }
 
-#themeToggle svg {
-  border-style: none;
-}
 
 .sun { 
   fill: rgb(12, 12, 12); 
@@ -184,7 +184,7 @@ nav {
   text-align: center;
   padding: 10px 20px;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: bold;
   text-transform: uppercase;
   border-style: none;
