Img/note/ajustement

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ const pageTitle = "Page d'accueil";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+  <h1>{pageTitle}</h1>
   <h2>Mon sous-titre de blog génial</h2>
   <p>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
