--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,8 +14,9 @@ const { pageTitle } = Astro.props;
   </head>
   <body>
     <Header />
-    <h1>{pageTitle}</h1>
+    <main>
     <slot />
+    </main>
     <Footer />
     <script>
       import "../scripts/menu.js";
