--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,17 +3,20 @@ import BaseLayout from './BaseLayout.astro';
 
 const {frontmatter} = Astro.props;
 ---
-<BaseLayout pageTitle={frontmatter.title}>
-
+<BaseLayout>
+<main>
+<h1>{frontmatter.title}</h1>
+<p class="info-note">{frontmatter.author} - {new Date(frontmatter.pubDate).toLocaleDateString('fr-FR', { day: '2-digit', month: '2-digit', year: 'numeric' })}</p>
+<hr>
+<br/>
 <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-
-<p>{frontmatter.author}</p>
-<p>{frontmatter.pubDate.toString().slice(0,10)}</p>
+<br/>
 <slot />
 <hr>
 <div class="tags">
     {frontmatter.tags.map((tag: string) => (
       <a href={`/tags/${tag}`} class="tag">{tag}</a>
     ))}
-  </div>
+</div>
+</main>
 </BaseLayout>
