--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,6 +20,7 @@ const pagetittle = "pagetittle";
   </head>
   <body>
     <Header/>
+    <main>
     <h1>Mon blog d'apprentissage Astro</h1>
     <p>Voici où je vais publier mon parcours d'apprentissage d'Astro.</p>
     <p class="div-2"><a href="/tags/">Étiquettes</a></p>
@@ -27,6 +28,7 @@ const pagetittle = "pagetittle";
     <ul>
       {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
     </ul>
+  </main>
     <Footer/>
     <script>
       import "../scripts/menu.js"
