--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@ body {
   width: 100%;
   height: 100%;
   max-width: 90ch;
-  padding: 1rem;
+  padding: 16px;
   line-height: 1.5;
 }
 
@@ -53,9 +53,12 @@ img {
 footer {
   display: flex;
   justify-content: center;
-  gap: 0rem;
-  margin-top: 1rem;
-  padding: 1rem;
+  position: relative;
+  bottom: 0;
+}
+
+footer p {
+  margin-bottom: 0;
 }
 
 
@@ -116,16 +119,13 @@ header {
   flex: 1;
   cursor: pointer;
   padding: 0;
-  z-index: 1001;
+  z-index: 9999;
   position: relative;
   visibility: visible;
   opacity: 1;
 }
 
-#themeToggle svg {
-  visibility: visible;
-  opacity: 1;
-}
+
 
 .sun { 
   fill: #0c0c0c; 
@@ -292,7 +292,7 @@ nav {
     display: flex;
     justify-content: space-between; /* Sépare les 3 zones */
     align-items: center; /* Aligne verticalement */
-    padding: 12px 0;
+    padding: 0px 0;
     border-style: none;
     position: relative;
     z-index: 100;
