ajustements body, footer

--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -11,6 +11,7 @@ const pageTitle = "Répertoire des étiquettes";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+  <h1>{pageTitle}</h1>
   <div class="tags">
     {
       tags.map((tag) => (
