--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,8 +15,9 @@ body {
   width: 100%;
   height: 100%;
   max-width: 90ch;
-  padding: 16px;
+  padding: 16px 16px 0 16px;
   line-height: 1.5;
+  border-style: none;
 }
 
 main {
@@ -54,13 +55,7 @@ footer {
   display: flex;
   justify-content: center;
   position: relative;
-  bottom: 0;
 }
-
-footer p {
-  margin-bottom: 0;
-}
-
 
 
 /* Classes */
@@ -72,7 +67,6 @@ footer p {
 .tags {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 1em;
 }
 
 .tag {
@@ -114,7 +108,6 @@ header {
   border: none;
   background: none;
   width: 30px;
-  height: 30px;
   display: flex;
   flex: 1;
   cursor: pointer;
