--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,37 +1,21 @@
 ---
-import '../styles/global.css';
-import Header from '../components/header.astro';
-import Footer from '../components/footer.astro';
+import { getCollection } from "astro:content";
 import BlogPost from "../components/BlogPost.astro";
+import BaseLayout from '../layouts/BaseLayout.astro';
 
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+const allPosts = await getCollection("notes");
 
-const pagetittle = "pagetittle";
+const pageTitle = "Notes";
 
 ---
+<BaseLayout pageTitle={pageTitle}>
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pagetittle}</title>
-  </head>
-  <body>
-    <Header/>
-    <main>
     <h1>Mon blog d'apprentissage Astro</h1>
     <p>Voici où je vais publier mon parcours d'apprentissage d'Astro.</p>
     <p class="div-2"><a href="/tags/">Étiquettes</a></p>
     
     <ul>
-      {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+      {allPosts.map((post: any) => <BlogPost url={`/posts/${post.id}/`} title={post.data.title} />)}
     </ul>
-  </main>
-    <Footer/>
-    <script>
-      import "../scripts/menu.js"
-    </script>
-  </body>
-</html>
+    
+</BaseLayout>
