--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -393,3 +393,65 @@ html.dark .logo a {
   border-radius: 0px;
 }
 
+/* Posts recent page index */
+
+.recent-posts {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.post-preview {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.post-preview-header {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+}
+
+.post-preview-header h3 {
+  margin: 0 0 0.5rem 0;
+}
+
+.post-preview-header a {
+  color: #213369;
+  text-decoration: none;
+}
+
+.post-preview-header a:hover {
+  text-decoration: underline;
+}
+
+.excerpt {
+  margin: 0;
+}
+
+.post-image {
+  
+  width: 50px;
+  height: 50px;
+  align-self: flex-start;
+ 
+}
+
+.post-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+@media screen and (min-width: 636px) {
+  .post-image {
+    width: 150px;
+    height: 100px;
+  }
+}
