--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -50,6 +50,14 @@ img {
   filter: drop-shadow(0px 0px 3px #7d7d7d);
 }
 
+.custom-img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  filter: drop-shadow(0px 0px 3px #7d7d7d);
+}
 
 footer {
   display: flex;
