--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,6 +48,7 @@ img {
   border-radius: 10px; /* Coins arrondis */
   object-fit: cover; /* Couvre le conteneur */
   filter: drop-shadow(0px 0px 3px #7d7d7d);
+  padding: 1px;
 }
 
 .custom-img {
@@ -57,6 +58,7 @@ img {
   border-radius: 10px;
   object-fit: cover;
   filter: drop-shadow(0px 0px 3px #7d7d7d);
+  padding: 1px;
 }
 
 footer {
