--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -4,7 +4,7 @@ import BaseLayout from './BaseLayout.astro';
 
 const {frontmatter} = Astro.props;
 
-const isOptimized = frontmatter.image?.src !== undefined && frontmatter.image.src !== "";
+const isOptimized = frontmatter.image?.src?.startsWith('http') ?? false;
 ---
 <BaseLayout>
 <main>
@@ -17,7 +17,7 @@ const isOptimized = frontmatter.image?.src !== undefined && frontmatter.image.sr
 <Image class="custom-img" src={frontmatter.image.src} width="600" height="300" alt={frontmatter.image.alt} />
 ) : (
   // Sinon, afficher une image classique
-  <img src={frontmatter.image.url} width="600" height="300" alt={frontmatter.image.alt} />
+  <img src={frontmatter.image.src} width="600" height="300" alt={frontmatter.image.alt} />
 )}<br/>
 <slot />
 <hr>
