--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const recentPosts = allPosts
   </p>
 
  <section class="recent-posts">
-    <h2>Derniers articles</h2>
+    <h2>Derniers posts</h2>
     {recentPosts.map((post) => (
       <article class="post-preview">
         <div class="post-preview-header">
@@ -41,8 +41,8 @@ const recentPosts = allPosts
         </div>
         {post.data.image && (
           <div class="post-image">
-            <img 
-              src={post.data.image.url} 
+            <image 
+              src={post.data.image.src} 
               alt={post.data.image.alt || post.data.title} 
             />
           </div>
