layout posts et contenus pages

--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -3,7 +3,7 @@
 <nav class="nav-links">
     <ul>
         <li><a href="/about/">À propos</a></li>
-        <li><a href="/blog/">Blog</a></li>
+        <li><a href="/blog/">Notes</a></li>
     </ul>
 </nav> 
 
