--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -22,7 +22,7 @@ const { posts } = Astro.props;
 ---
 <BaseLayout pageTitle={tag}>
   <br/>
-  <p>Articles étiquetés avec {tag}</p>
+  <p>Notes étiquetés avec {tag}</p>
   <ul>
     {posts.map((post: any) => <BlogPost url={`/posts/${post.id}/`} title={post.data.title}/>)}
   </ul>
