--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -7,17 +7,17 @@ const tags = [
   ...new Set(allPosts.map((post: any) => post.data.tags).flat()),
 ];
 
-const pageTitle = "Répertoire des étiquettes";
+const pageTitle = "Répertoire des étiquettes (tags)";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <h1>{pageTitle}</h1>
-  <div class="tags">
+  <div>
     {
       tags.map((tag) => (
-        <p class="tag">
+        <ul class="tag">
           <a href={`/tags/${tag}`}>{tag}</a>
-        </p>
+        </ul>
       ))
     }
   </div>
