--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,7 +4,7 @@ import Hamburger from "./hamburger.astro";
 import ThemeIcon from "./ThemeIcon.astro";
 ---
 <header>
-    <nav class="logo"><a href="/">ACME</a></nav>
+    <nav class="logo"><a href="/">NAJO</a></nav>
     <nav>
         <Hamburger/>
         <Navigation/>
