--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,10 +19,10 @@ const recentPosts = allPosts
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>Curiosités - Inspirations</h2>
-  <img src="/images/Cerfdanschamp.jpg" alt="Description de l'image" />
+  <img class="img-cover" src="/images/Cerfdanschamp.jpg" alt="Description de l'image" />
   <p>
     Cet espace propose une collection de découvertes, d'inspirations, d'idées et d'expériences.
-    <br/>L'objectif est d'inviter chacun à explorer de nouvelles perspectives et à nourrir sa curiosité.
+    <br/>L'objectif est inviter chacun à explorer de nouvelles perspectives et à nourrir sa curiosité.
   </p>
 
   <section class="recent-posts">
