--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,25 +45,29 @@ p a:hover {
   text-decoration: underline;
 }
 
+p img {
+  display: block; /* Permet le centrage */
+  margin-left: auto;
+  margin-right: auto;
+}
+
 img {
-  width: 100%; /* Prend toute la largeur */
+  width: 80%; /* Prend toute la largeur */
   height: auto; /* Garde les proportions */
   max-width: 100%; /* Ne dépasse pas la largeur du conteneur */
   border-radius: 10px; /* Coins arrondis */
   object-fit: cover; /* Couvre le conteneur */
-  filter: drop-shadow(0px 0px 3px #7d7d7d);
+  filter: drop-shadow(0px 0px 2px #7d7d7d);
   padding: 1px;
+
 }
 
-.image {
-  aspect-ratio: 16/9;
+.img-cover {
   width: 100%;
   height: auto;
-  max-width: 100%;
-  border-radius: 10px;
-  object-fit: cover;
-  filter: drop-shadow(0px 0px 3px #7d7d7d);
-  padding: 1px;
+  display: block; /* Permet le centrage */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer {
@@ -480,5 +484,7 @@ html.dark .logo a {
   .post-image {
     width: 150px;
     height: 100px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
