--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,8 +21,8 @@ const recentPosts = allPosts
   <h2>Curiosités - Inspirations</h2>
   <img class="img-cover" src="/images/Cerfdanschamp.jpg" alt="Description de l'image" />
   <p>
-    Cet espace propose une collection de découvertes, d'inspirations, d'idées et d'expériences.
-    <br/>L'objectif est inviter chacun à explorer de nouvelles perspectives et à nourrir sa curiosité.
+    Cet espace propose une collection de découvertes, d'inspirations, d'idées et d'expériences sur des sujets variés (Tech, Maison, Developpement, Style de vie...).
+    <br/>L'objectif est d'explorer de nouvelles perspectives et de nourrir sa curiosité.
   </p>
 
   <section class="recent-posts">
