ajout favicon et modifs content index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,10 @@ const recentPosts = allPosts
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h2>Curiosités - Inspirations</h2>
+  <h2>Curiosités, etcetera.</h2>
   <img class="img-cover" src="/images/Cerfdanschamp.jpg" alt="Description de l'image" />
   <p>
-    Cet espace propose une collection de découvertes, d'inspirations, d'idées et d'expériences sur des sujets variés (Tech, Maison, Developpement, Style de vie...).
-    <br/>L'objectif est d'explorer de nouvelles perspectives et de nourrir sa curiosité.
+    Explorer de nouvelles perspectives et suivre sa curiosité.
   </p>
 
   <section class="recent-posts">
